# fastq_count_rs

./: .dockerignore  .gitignore  .tokeignore  Cargo.toml  README.md  ds-one.yaml  output.txt  rs-one.yaml
examples/: filepath.rs
src/: fq_count.rs  lib.rs  main.rs
src/count/: base.rs  count1.rs  count2.rs  count3.rs  mod.rs
src/fq_count/: base.rs  count2.rs
tests/: tests.rs
