[package]
name = "fastq_count"
version = "0.8.0"
authors = ["d2jvkpn"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "2.0.2"

[dependencies]
clap = "2.33.3"
flate2 = "1.0.22"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_derive = "1.0.130"
chrono = "0.4.19"
